<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="12dp"
        android:paddingEnd="20dp"
        android:paddingBottom="4dp">

        <ImageView
            android:id="@+id/webAppIcon"
            android:layout_width="@dimen/webapp_icon_size"
            android:layout_height="@dimen/webapp_icon_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_globe" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/install_web_app_name"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/nameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:singleLine="true"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:text="@string/install_web_app_url"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/urlField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:maxLines="1"
            android:singleLine="true"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:text="@string/install_web_app_ua"
            android:textSize="13sp" />

        <Spinner
            android:id="@+id/userAgentSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="14dp"
            android:text="@string/install_web_app_note"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="12sp" />
    </LinearLayout>
</ScrollView>
